--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -65,6 +65,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:hint="@string/password"
+                    android:text="jdhjvgsd"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:paddingTop="6dp"
