--- a/app/src/main/res/layout/fragment_modal_bottom_sheet_share_sms.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet_share_sms.xml
@@ -13,18 +13,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_12sdp"
-        android:text="@string/share_via_email"
+        android:fontFamily="@font/mtn_brighter_sans_bold"
+        android:text="@string/share_via_sms"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
-        android:fontFamily="@font/mtn_brighter_sans_bold"/>
+        android:textSize="@dimen/_12sdp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_8sdp"
-        android:gravity="center"
         android:fontFamily="@font/mtn_brighter_sans_regular"
+        android:gravity="center"
         android:text="@string/share_via_sms_msg"
         android:textColor="@color/gray_light" />
 
