--- a/app/src/main/res/layout/fragment_modal_bottom_sheet_share_via_email.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet_share_via_email.xml
@@ -40,7 +40,7 @@
         android:paddingEnd="12dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputFirstName"
+            android:id="@+id/inputEmail"
             style="@style/Widget.Design.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             app:hintTextColor="@color/gray">
 
             <EditText
-                android:id="@+id/etPickupAddress"
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
