--- a/app/src/main/res/layout/fragment_registeration.xml
+++ b/app/src/main/res/layout/fragment_registeration.xml
@@ -278,18 +278,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <TextView
-                            android:id="@+id/et"
+                        <Spinner
+                            android:id="@+id/spinner"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="@dimen/_16sdp"
+                            android:layout_height="@dimen/_35sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:layout_weight="1"
-                            android:background="@android:color/transparent"
-                            android:fontFamily="@font/mtn_brighter_sans_medium"
-                            android:text="fruits"
-                            android:textColor="@color/et_color_black_100_opacity"
-                            android:textSize="@dimen/_12sdp" />
+                            android:dropDownVerticalOffset="40dp"
+                            android:gravity="start"
+                            android:padding="@dimen/_8sdp"
+                            android:text="Never"
+                            app:backgroundTint="@android:color/transparent" />
 
                         <ImageView
                             android:layout_width="wrap_content"
