--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -228,20 +228,84 @@
             </LinearLayout>
 
 
-            <com.github.mikephil.charting.charts.BarChart
+            <com.paysky.momogrow.views.customviews.RoundedBarChart
                 android:id="@+id/chart1"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_150sdp"
+                android:layout_height="@dimen/_170sdp"
+                android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_22sdp"
-                app:layout_constraintTop_toBottomOf="@id/linear2" />
+                android:layout_marginEnd="@dimen/_10sdp"
+                app:layout_constraintTop_toBottomOf="@id/linear2"
+                app:radius="@dimen/_6sdp" />
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_22sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/_22sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_14sdp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/linear2">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_2sdp"
+                    android:background="@drawable/dash_line_gray" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_2sdp"
+                    android:background="@drawable/dash_line_gray" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_2sdp"
+                    android:background="@drawable/dash_line_gray" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_6sdp" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_6sdp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_2sdp"
+                    android:background="@drawable/dash_line_gray" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linear3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/_36sdp"
                 android:layout_marginEnd="26dp"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
