--- a/app/src/main/res/layout/activity_authenticate_frgot_password.xml
+++ b/app/src/main/res/layout/activity_authenticate_frgot_password.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.products.ProductDetailsActivity">
+    tools:context=".views.login.AuthenticateFrgotPasswordActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
