--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -63,6 +63,7 @@
             android:maxLength="50"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="15sp" />
 
