--- a/app/src/main/res/layout/activity_pendig_approval.xml
+++ b/app/src/main/res/layout/activity_pendig_approval.xml
@@ -92,6 +92,7 @@
         android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        android:onClick="back"
         android:textSize="@dimen/_12sdp"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
