--- a/app/src/main/res/layout/fragment_pending_approval_product.xml
+++ b/app/src/main/res/layout/fragment_pending_approval_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.catalog.PendingApprovalProductFragment">
+    tools:context=".views.products.PendingApprovalProductFragment">
 
     <LinearLayout
         android:id="@+id/linearPendingApproval"
