--- a/app/src/main/res/navigation/nav_add_product_graph.xml
+++ b/app/src/main/res/navigation/nav_add_product_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/addProductFragment"
-        android:name="com.paysky.momogrow.views.catalog.AddProductFragment"
+        android:name="com.paysky.momogrow.views.products.AddProductFragment"
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/pendingApprovalProductFragment"
-        android:name="com.paysky.momogrow.views.catalog.PendingApprovalProductFragment"
+        android:name="com.paysky.momogrow.views.products.PendingApprovalProductFragment"
         android:label="fragment_pending_approval_product"
         tools:layout="@layout/fragment_pending_approval_product">
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
-        android:name="com.paysky.momogrow.views.catalog.ProductDetailsFragment"
+        android:name="com.paysky.momogrow.views.products.ProductDetailsFragment"
         android:label="fragment_product_details"
         tools:layout="@layout/fragment_product_details" >
         <action
