--- a/app/src/main/res/layout/custom_item_catalog.xml
+++ b/app/src/main/res/layout/custom_item_catalog.xml
@@ -17,15 +17,15 @@
             android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/applepng"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="26dp"
+            android:layout_weight="2"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -33,16 +33,19 @@
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/mtn_brighter_sans_medium"
-                android:text="Green Apple "
+                android:gravity="start"
+                android:text="Green Appllnlbdnkenklewnklnwelfnlewkfnlkwefnmwe;e "
                 android:textColor="@color/et_color_black_100_opacity"
                 android:textStyle="normal" />
 
             <TextView
-                android:id="@+id/tvAmount"
+                android:id="@+id/tvPublishStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:fontFamily="@font/mtn_brighter_sans_regular"
                 android:gravity="center|start"
                 android:text="SKU 126516 "
