--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -49,7 +49,6 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/applepng"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp" />
 
@@ -385,6 +384,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/ivImage1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/_8sdp"
